crates/parse/src/snapshots/parse__tests__parse_inline_ok@0016_output.tip.snap
---
source: crates/parse/src/tests.rs
description: "output 1;\n"
input_file: crates/parse/test_data/parse/inline/ok/stm/0016_output.tip
---
Output(Int(1))
