crates/parse/src/snapshots/parse__tests__parse_inline_ok@0017_while.tip.snap
---
source: crates/parse/src/tests.rs
description: "while 1 { a = 1; }\n"
input_file: crates/parse/test_data/parse/inline/ok/stm/0017_while.tip
---
While(Int(1), Block([
  Assign(Id("a"), Int(1)),
]))
