crates/parse/src/snapshots/parse__tests__parse_inline_ok@0020_return.tip.snap
---
source: crates/parse/src/tests.rs
description: "return 1;\n"
input_file: crates/parse/test_data/parse/inline/ok/stm/0020_return.tip
---
Return(Int(1))
