crates/parse/src/snapshots/parse__tests__parse_inline_ok@0021_block.tip.snap
---
source: crates/parse/src/tests.rs
description: "{ a = 1; }\n"
input_file: crates/parse/test_data/parse/inline/ok/stm/0021_block.tip
---
Block([
  Assign(Id("a"), Int(1)),
])
