crates/parse/src/snapshots/parse__tests__parse_inline_ok@0022_indirect_field_update.tip.snap
---
source: crates/parse/src/tests.rs
description: "(*x).y = 1;\n"
input_file: crates/parse/test_data/parse/inline/ok/stm/0022_indirect_field_update.tip
---
IndirectFieldUpdate(Id(Id("x")), Id("y"), Int(1))
