crates/parse/src/snapshots/parse__tests__parse_inline_ok@0027_bin_op_no_space.tip.snap
---
source: crates/parse/src/tests.rs
description: "2-1\n"
input_file: crates/parse/test_data/parse/inline/ok/exp/0027_bin_op_no_space.tip
---
BinOp(Int(2), Sub, Int(1))
